--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Hadin Travel menyediakan paket wisata terbaik ke berbagai destinasi menarik, dengan harga terjangkau dan layanan pelanggan yang luar biasa."
+    />
     <title>Hadin Tour & Travel</title>
   </head>
   <body>
